--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,49 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.left span {
+  margin-right: 30px;
+}
+.right button {
+  margin-right: 20px;
+}
+.login {
+  color: rgb(93, 99, 223);
+  border: 1px solid rgb(93, 99, 223);
+  border-radius: 5px;
+  padding: 5px;
+  cursor: pointer;
+}
+.signup {
+  color: white;
+  background-color: rgb(93, 99, 223);
+  border: none;
+  border-radius: 5px;
+  padding: 6px;
+  cursor: pointer;
+}
+.home {
+  margin-top: 70px;
+}
+.search {
+  margin-top: 60px;
+}
+.fav {
+  background-color: blueviolet;
+  color: white;
+  padding: 5px;
+  border-radius: 5px;
+  margin-left: 67vw;
+  margin-bottom: 50px;
+  width: 200px;
+  text-align: center;
+  cursor: pointer;
+}
+.section {
+  margin-top: 80px;
 }
